--- a/Program/AccountServer.ini
+++ b/Program/AccountServer.ini
@@ -1,11 +1,11 @@
 TEST
 AddTail( -1, 1, "FlyFF", "127.0.0.1", 0, 1, 0, 1 );
 	AddTail( 1, 1, "Channel 1", "127.0.0.1", 1, 1, 500, 1 );
-DSN_NAME_LOGIN			"useless_account"
+DSN_NAME_LOGIN			"useless_sg_account"
 DB_ADMIN_ID_LOGIN		"account"
 
-DSN_NAME_LOG			"useless_log"
-DB_ADMIN_ID_LOG			"useless_log"
+DSN_NAME_LOG			"useless_sg_log"
+DB_ADMIN_ID_LOG			"useless_sg_log"
 
 MSG_VER		"20100412"
 
