--- a/Program/DatabaseServer.ini
+++ b/Program/DatabaseServer.ini
@@ -2,11 +2,11 @@ ResourceFolder	"..\Resource"
 Sys		1
 Account		"127.0.0.1"
 
-DSN_NAME_CHARACTER    "useless_character"
-DB_ADMIN_ID_CHARACTER    "useless_character"
+DSN_NAME_CHARACTER    "useless_sg_character"
+DB_ADMIN_ID_CHARACTER    "useless_sg_character"
 
-DSN_NAME_LOG    "useless_log"
-DB_ADMIN_ID_LOG		"useless_log"
+DSN_NAME_LOG    "useless_sg_log"
+DB_ADMIN_ID_LOG		"useless_sg_log"
 
 //ITEMUPDATE
 
