--- a/Source/databaseserver/databaseserver.ini
+++ b/Source/databaseserver/databaseserver.ini
@@ -1,11 +1,11 @@
 ResourceFolder	"D:\Neurospace\Resource"
 Sys		19
 Account	"192.168.10.71"
-DSN_NAME_CHARACTER    "useless_character"
-DB_ADMIN_ID_CHARACTER    "useless_character"
+DSN_NAME_CHARACTER    "useless_sg_character"
+DB_ADMIN_ID_CHARACTER    "useless_sg_character"
 
-DSN_NAME_LOG		"useless_log"
-DB_ADMIN_ID_LOG		"useless_log"
+DSN_NAME_LOG		"useless_sg_log"
+DB_ADMIN_ID_LOG		"useless_sg_log"
 
 DSN_NAME_BACKSYSTEM	"BACKENDSYSTEM"
 DB_ADMIN_ID_BACKSYSTEM	"backend"
